# aws_v2

./: README.md  cloudformation.py  cloudwatch.py  exceptions.py  identitystore.py  main.py  pyproject.toml  servicecatalog.py
.github/: copilot-instructions.md
aws_v2/: __init__.py  cloudformation.py  cloudwatch.py  dynamodb.py  ec2.py  exceptions.py  iam.py  identitystore.py  logs.py  organizations.py  s3.py  scheduler.py  servicecatalog.py  ses.py  sqs.py  ssm.py  sso_admin.py  sts.py  utils.py
aws_v2/models/: __init__.py  base.py  cloudformation.py  cloudwatch.py  common.py  dynamodb.py  ec2.py  iam.py  identitystore.py  logs.py  organizations.py  s3.py  scheduler.py  servicecatalog.py  ses.py  sqs.py  ssm.py  sso_admin.py  sts.py
tests/: __init__.py  test_cloudformation.py  test_cloudwatch.py  test_dynamodb.py  test_ec2.py  test_iam.py  test_identitystore.py  test_logs.py  test_organizations.py  test_s3.py  test_scheduler.py  test_servicecatalog.py  test_ses.py  test_sqs.py  test_ssm.py  test_sso_admin.py  test_sts.py  test_utils.py
