[project]
name = "aws-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "boto3>=1.40.16",
    "flake8>=7.3.0",
    "isort>=6.0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
exclude = ["__pycache__", ".git", "build", "dist"]
