[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-v2"
version = "0.1.0"
description = "A Python library providing an abstraction layer on top of boto3 for simplified AWS service interactions"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Chris Rodenas", email = "rodenas@gmail.com"}
]
keywords = ["aws", "boto3", "cloud", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "boto3>=1.40.16",
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
]

[project.urls]
Homepage = "https://github.com/crodenas/aws_v2"
Repository = "https://github.com/crodenas/aws_v2"
Issues = "https://github.com/crodenas/aws_v2/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
exclude = ["__pycache__", ".git", "build", "dist"]
